# Ai-Guard-DAO

./: .env.example  .gitignore  BACKEND_ARCHITECTURE.md  BACKEND_INTEGRATION_WORKFLOWS.md  CONTRACT_INTEGRATION.md  CREATE_PROPOSAL_ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md  INTEGRATION_PLAN.md  LICENSE  LOCAL_SETUP.md  PRD_AI_Guard_Dog_Intern.md  Proposal_examples.md  README.md  SYSTEM_INTEGRATION_ARCHITECTURE.md  TEAM_SETUP.md  docker-compose.yml  package-lock.json  package.json  start-local.bat  start-local.sh  tsconfig.json
ai-guard-dao/: .env.example  README.md  hardhat.config.js  package-lock.json  package.json
ai-guard-dao/backend/: contractService.js  server.js
ai-guard-dao/contracts/: AuditLogger.sol  DAOGovernor.sol  MockToken.sol  VotingAgent.sol
ai-guard-dog-backend/: .gitignore  README.md  docker-compose.yml
ai-guard-dog-backend/intelligence/: .env.example  Dockerfile  pyproject.toml  requirements.txt
ai-guard-dog-backend/intelligence/app/: main.py
ai-guard-dog-backend/intelligence/app/agents/: __init__.py  mediator_agent.py  nlp_agent.py  reputation_agent.py
ai-guard-dog-backend/intelligence/app/examples/: __init__.py  test_proposals.py
ai-guard-dog-backend/intelligence/app/schemas/: __init__.py  models.py
ai-guard-dog-backend/intelligence/app/services/: __init__.py  snapshot_service.py
monad-dao/: .env.example  .gitignore  IMPLEMENTATION_COMPLETE.md  README.md  hardhat.config.js  package-lock.json  package.json
react-app/: .env.example  index.html  package-lock.json  package.json  vite.config.js
scripts/: setup-env.ts
(+149 files in other folders)
