[project]
name = "ai-guard-dog-intelligence"
version = "1.0.0"
description = "Python Intelligence Layer for AI Guard Dog Intern - Multi-agent AI analysis system"
authors = [{ name = "AI Guard Dog Team" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",
    "numpy>=1.26.3",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=23.12.1",
    "ruff>=0.1.9",
]
ai = [
    "transformers>=4.36.2",
    "torch>=2.1.2",
    "openai>=1.6.1",
    "anthropic>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
